# kinetic

./: .gitignore  .gitmodules  .rustfmt.toml  ARCHITECTURE.md  Cargo.toml  README.md  check_key.rs  install-daemon.sh  install-linux.sh  install-mac.sh  install-node.sh  install-windows.bat  install.ps1  install.sh  test-config.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  GOVERNANCE.md  SECURITY.md
.github/workflows/: ci.yml  gh-pages.yml  release.yml
docs/: book.toml  custom.css  generate_sitemap.sh
docs/src/: SUMMARY.md  adversarial_analysis.md  code_walkthrough_client.md  code_walkthrough_core.md  code_walkthrough_daemon.md  code_walkthrough_network.md  cryptography.md  dns_loopback.md  edge_case_report.md  future_horizons.md  getting_started.md  hybrid_lease_system.md  introduction.md  kinetic-kid.md  kinetic_node.md  kinetic_storage.md  kinetic_test.md  network_architecture.md  protocol_specification.md  vdf-calibration.md  whitepaper.md
docs/theme/: head.hbs
install/: kinetic-daemon.service
kinetic-cli/: Cargo.toml
kinetic-cli/src/: main.rs
kinetic-core/: Cargo.toml
kinetic-core/benches/: crypto_bench.rs
kinetic-core/fuzz/: Cargo.toml
kinetic-core/fuzz/fuzz_targets/: fuzz_target_1.rs
kinetic-core/src/: bin_test.rs  config.rs  consensus_math.rs  drand.rs  error.rs  lib.rs  mempool.rs  traits.rs  types.rs
kinetic-core/tests/: test_002_silent_identity_wipe.rs  test_003_oom_payload_bomb.rs  test_004_exponential_overflow.rs  test_020_hardware_drift.rs  test_021_subdomain_hijack.rs  test_022_ephemeral_key.rs  test_024_cctld_extraction.rs  test_025_spam_decay.rs  test_029_protocol_downgrade.rs
kinetic-daemon/: Cargo.toml
kinetic-daemon/src/: api.rs  api_tests.rs  ca.rs  drand.rs  main.rs  nostr.rs  pac.rs  proxy.rs
kinetic-dns/: Cargo.toml
kinetic-dns/fuzz/: Cargo.toml
kinetic-dns/fuzz/fuzz_targets/: parse_dns.rs
kinetic-dns/src/: lib.rs
kinetic-kid/: Cargo.toml
kinetic-kid/src/: did.rs  document.rs  error.rs  lib.rs  manifest.rs
kinetic-kid/tests/: test_013_kid_hijack.rs
kinetic-network/: Cargo.toml
kinetic-network/src/: behavior.rs  client.rs  event_loop.rs  lib.rs  network.rs  pow.rs  store.rs
kinetic-network/tests/: test_009_memory_store_bloat.rs  test_010_xor_eclipse.rs
kinetic-node/: Cargo.toml
kinetic-node/src/: main.rs
kinetic-storage/: Cargo.toml
kinetic-storage/src/: lib.rs
kinetic-storage/tests/: test_006_sled_corruption_recovery.rs  test_007_async_disk_io_block.rs  test_008_locked_database_ux.rs
kinetic-test/: Cargo.toml  e2e_identity_test.sh  e2e_test.sh  test_drand_resilience.sh
kinetic-test/src/: lib.rs
kinetic-test/tests/: dns_integration.rs
kinetic-ui/: index.html  package-lock.json  package.json  vite.config.ts
kinetic-ui/src/: App.tsx  ErrorBoundary.tsx  index.css  main.tsx
kinetic-ui/src/pages/: Dashboard.tsx  DomainView.tsx  NetworkStatus.tsx  Registration.tsx  Settings.tsx  Watchtowers.tsx
kinetic-vdf/: Cargo.toml
kinetic-vdf/benches/: vdf_bench.rs
kinetic-vdf/src/: lib.rs
kinetic-vdf/tests/: test_005_cpu_starvation_race.rs
scratch_site/: index.html
scripts/: install-daemon.sh  install.ps1  install.sh  kinetic-node.service
simulations/: Cargo.toml
simulations/src/: sim_dht_eclipse.rs  sim_escalation.rs
whitepaper/: Kinetic-kid.md  LICENSE  draft-mukhtar-kinetic-identity-00.md  draft-mukhtar-kinetic-identity-00.xml  draft-mukhtar-kinetic-network-00.md  draft-mukhtar-kinetic-network-00.xml  kinetic.md
