[package]
name = "kinetic-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
ed25519-dalek = "2.2.0"
getrandom = "0.4.3"
hex = "0.4.3"
kinetic-core = { version = "0.1.0", path = "../kinetic-core" }
kinetic-vdf = { version = "0.1.0", path = "../kinetic-vdf" }
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
