[package]
name = "kinetic-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
sha2 = "0.10"
reqwest = { version = "0.13.4", features = ["json"] }
tokio = { workspace = true, features = ["sync", "rt"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing.workspace = true
toml = "1.1.2"
directories = "6.0.0"
ed25519-dalek = "2.2.0"
getrandom = "0.4.3"
dirs = "6.0.0"
hickory-resolver = "0.24.4"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "crypto_bench"
harness = false
