[package]
name = "kinetic-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kinetic-core = { path = "../kinetic-core" }
kinetic-vdf = { path = "../kinetic-vdf" }
kinetic-network = { path = "../kinetic-network" }
kinetic-storage = { path = "../kinetic-storage" }
kinetic-dns = { path = "../kinetic-dns" }
kinetic-kid = { path = "../kinetic-kid" }
sha2 = "0.10"
hex = "0.4.3"
tokio = { workspace = true, features = ["net"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
libp2p = { version = "0.53", features = ["ed25519"] }
hickory-server = "0.24.4"
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ed25519-dalek = "2.2.0"
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["json"] }
hyper = { version = "1.10.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
http-body-util = "0.1.3"
thiserror.workspace = true
dirs = "6.0.0"
rcgen = { version = "0.13.2", features = ["x509-parser"] }
rustls = "0.23.41"
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.14.1"
time = "0.3.51"

[dev-dependencies]
http = "1.4.2"
httptest = "0.16.4"
tempfile = "3.27.0"
