[package]
name = "kinetic-dns"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kinetic-core = { version = "0.1.0", path = "../kinetic-core" }
hickory-server = "0.24"
async-trait = "0.1"
tokio = { workspace = true, features = ["sync"] }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
hickory-proto = "0.24"
kinetic-network = { version = "0.1.0", path = "../kinetic-network" }
hickory-resolver = { version = "0.24.4", features = ["dns-over-https-rustls", "webpki-roots"] }
serde_json = "1.0.150"
moka = { version = "0.12", features = ["future"] }
