[package]
name = "kinetic-dns-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
kinetic-dns = { path = ".." }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "parse_dns"
path = "fuzz_targets/parse_dns.rs"
test = false
doc = false
